| Summary: | ASTERISK-19628: Crash during blind transfer with chan_unistim | ||
| Reporter: | Igor Olhovskiy (samael28) | Labels: | |
| Date Opened: | 2012-04-03 01:57:46 | Date Closed: | 2012-07-24 04:00:21 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_unistim |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 6.0, Asterisk-SVN-r360935, VmWare 3.5 virtual machine. | Attachments: | ( 0) backtrace.txt ( 1) backtrace1.txt ( 2) unistim.conf |
| Description: | When call to i2004, trying to transfer to another SIP device, asterisk crushes. What info to be provided to detailed debug? All SIP abonents are on another Asterisk server. (Due to testing purposes) Console output is: -- Starting switch on '604@604-0' to 602 -- Executing [602@TestUNISTIM:1] Dial("USTM/604@604-0xa439b90", "SIP/MainAsterisk/602") in new stack == Using SIP RTP CoS mark 5 -- Called SIP/MainAsterisk/602 == Using SIP RTP CoS mark 5 -- Executing [602@LocalIn:1] Set("SIP/MainAsterisk-00000003", "CALLERID(name)=Main Asterisk") in new stack -- Executing [602@LocalIn:2] Dial("SIP/MainAsterisk-00000003", "USTM/602@602") in new stack [Apr 3 09:47:21] ERROR[2919][C-00000000]: astobj2.c:140 INTERNAL_OBJ: user_data is NULL -- Called USTM/602@602 -- USTM/602@602-0xa434780 is ringing -- SIP/MainAsterisk-00000002 is ringing -- USTM/602@602-0xa434780 answered SIP/MainAsterisk-00000003 -- SIP/MainAsterisk-00000002 answered USTM/604@604-0xa439b90 -- Started music on hold, class 'default', on SIP/MainAsterisk-00000003 -- Starting switch on '602@602-0' to 658 -- Executing [658@TestUNISTIM:1] Dial("USTM/602@602-0xa4a2fd8", "SIP/MainAsterisk/658") in new stack == Using SIP RTP CoS mark 5 -- Called SIP/MainAsterisk/658 -- SIP/MainAsterisk-00000004 is ringing -- Stopped music on hold on SIP/MainAsterisk-00000003 [Apr 3 09:47:36] NOTICE[2907]: chan_unistim.c:2367 attempt_transfer: UNISTIM transfer: trying to masquerade SIP/MainAsterisk-00000003 into USTM/602@602-0xa4a2fd8 [Apr 3 09:47:36] NOTICE[2920]: chan_unistim.c:2375 attempt_transfer: Transfer attempted with no appropriate bridged calls to transfer attempt_transfer failed. NortelStationTrunk*CLI> Disconnected from Asterisk server Executing last minute cleanups Asterisk cleanly ending (0). | ||
| Comments: | By: Igor Olhovskiy (samael28) 2012-04-03 02:02:18.042-0500 Unistim config file. By: Igor Goncharovsky (igorg) 2012-04-03 02:10:15.607-0500 Please attach gdb output on core dump generated. You have tried to transfer call while number 658 does not answer call? Can you try dial 658 and transfer after its answer. Check if asterisk crashed in this case. By: Igor Olhovskiy (samael28) 2012-04-03 02:41:54.440-0500 gdb -se "asterisk" -ex "bt full" -ex "thread apply all bt" --batch -c /tmp/core.NortelStationTrunk-2012-04-03T10:33:59+0300 > /tmp/backtrace.txt By: Igor Olhovskiy (samael28) 2012-04-03 02:42:26.932-0500 gdb -se "/usr/sbin/asterisk" -ex "bt full" -ex "thread apply all bt" --batch -c /tmp/core.NortelStationTrunk-2012-04-03T10:33:59+0300 > /tmp/backtrace1.txt By: Igor Olhovskiy (samael28) 2012-04-03 02:43:23.917-0500 Yes, Asterisk crashes only in blind transfer case. With attendant transfer all is OK. | ||